--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>Test</title>
     <script type="text/javascript">
+    function funcOnload() {
+        console.log('loaded');
+    }
     </script>
 </head>
-<body onload="funcInHead();">
+<body onload="funcOnload();">
     <h1>Some Title</h1>
     <script type="text/javascript">
     window.open('', '');
-    console.log('hello');
     </script>
     <p>
     Some content.
